Expense API's created and implemented to frontend.