@@ -16,19 +16,52 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
+import java.time.YearMonth;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Slf4j
-public class ExpenseServiceImpl implements ExpenseService{
+public class ExpenseServiceImpl implements ExpenseService {
     private final ExpenseRepository expenseRepository;
     private final ExpenseMapper expenseMapper;
     private final UserService userService;
 
-    private AppUser currentUser(){
+    private AppUser currentUser() {
         return userService.getCurrentUser();
+    }
+
+    @Override
+    public List<ExpenseDto> getExpenses() {
+        AppUser user = currentUser();
+        List<Expense> userExpenses = expenseRepository.findByUser(user);
+        return userExpenses.isEmpty() ? Collections.emptyList() :
+                userExpenses.stream().map(expenseMapper::toExpenseDto).toList();
+    }
+
+    @Override
+    public List<ExpenseDto> findExpensesByMonth(int year, int month) {
+        AppUser user = currentUser();
+        LocalDate startDate = YearMonth.of(year, month).atDay(1);
+        LocalDate endDate = YearMonth.of(year, month).atEndOfMonth();
+
+        return expenseRepository.findByUserAndDateBetween(user, startDate, endDate)
+                .stream()
+                .map(expenseMapper::toExpenseDto)
+                .toList();
+    }
+
+    @Override
+    public List<ExpenseDto> findExpensesByYear(int year) {
+        AppUser user = currentUser();
+        LocalDate startDate = LocalDate.of(year, 1, 1);
+        LocalDate endDate = LocalDate.of(year, 12, 31);
+
+        return expenseRepository.findByUserAndDateBetween(user, startDate, endDate)
+                .stream()
+                .map(expenseMapper::toExpenseDto)
+                .toList();
     }
 
     @Override
@@ -44,50 +77,53 @@ public class ExpenseServiceImpl implements ExpenseService{
                 .currency(expenseRequest.currency())
                 .user(user)
                 .build();
+
         expenseRepository.save(expense);
         return expenseMapper.toExpenseDto(expense);
     }
 
     @Override
     public ExpenseDto findExpenseById(Long expenseId) {
-        Expense expense = expenseRepository.findById(expenseId)
-                .orElseThrow(()-> new ExpenseNotFoundException("Expense not found by id : "+expenseId));
+        AppUser user = currentUser();
+        Expense expense = expenseRepository.findByUserAndExpenseId(user, expenseId)
+                .orElseThrow(() -> new ExpenseNotFoundException("Expense not found for user with id: " + expenseId));
+
         return expenseMapper.toExpenseDto(expense);
     }
 
     @Override
     public List<ExpenseDto> findExpensesByCategory(Category category) {
-       AppUser user = currentUser();
-       List<Expense> expensesByCategory = expenseRepository.findExpensesByUserAndCategory(user,category);
-       return expensesByCategory.stream()
-               .map(expenseMapper::toExpenseDto)
-               .collect(Collectors.toList());
+        AppUser user = currentUser();
+        return expenseRepository.findExpensesByUserAndCategory(user, category)
+                .stream()
+                .map(expenseMapper::toExpenseDto)
+                .toList();
     }
 
     @Override
     public List<ExpenseDto> findExpensesByStatus(Status status) {
         AppUser user = currentUser();
-        List<Expense> expensesByStatus = expenseRepository.findExpensesByUserAndStatus(user,status);
-        return expensesByStatus.stream()
+        return expenseRepository.findExpensesByUserAndStatus(user, status)
+                .stream()
                 .map(expenseMapper::toExpenseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ExpenseDto> findExpensesByCurrency(Currency currency) {
         AppUser user = currentUser();
-        List<Expense> expensesByCurrency = expenseRepository.findExpensesByUserAndCurrency(user,currency);
-        return expensesByCurrency.stream()
+        return expenseRepository.findExpensesByUserAndCurrency(user, currency)
+                .stream()
                 .map(expenseMapper::toExpenseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<ExpenseDto> findByDate(LocalDate date) {
         AppUser user = currentUser();
-        List<Expense> expensesByCurrency = expenseRepository.findExpensesByUserAndDate(user,date);
-        return expensesByCurrency.stream()
+        return expenseRepository.findExpensesByUserAndDate(user, date)
+                .stream()
                 .map(expenseMapper::toExpenseDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
